{{$NEXT}}

0.000030  2016-05-09 07:55:17-07:00 America/Los_Angeles

0.000029  2016-04-30 15:17:01-07:00 America/Los_Angeles

    - Doc updates from jkeroes
    - Doc updates from stevieb9
    - SRand now works without harness
    - Fix emails

0.000028  2016-04-15 14:32:30-07:00 America/Los_Angeles

    - Add Tools/Event gen_event()
    - Add Tools/Event to Extended bundle

0.000027  2016-04-13 20:22:17-07:00 America/Los_Angeles

    - Make some tests ignore custom formatters

0.000026  2016-04-05 11:11:35-07:00 America/Los_Angeles

    - Add OrderedSubset compare tools
    - Use OrderedSubset compare tool in subtest tests.
    - Bump minimumTest2 version

0.000025  2016-04-03 15:39:59-07:00 America/Los_Angeles

    - Allow column aliasing in Deltas (jkeroes)
    - Bump required Test2 version

0.000024  2016-03-20 13:40:06-07:00 America/Los_Angeles

    - Add back missing README and README.md files
    - Documentation fixes
    - No logic/code changes

0.000023  2016-03-17 23:02:50-07:00 America/Los_Angeles

    - Fix Changes file
    - Fix bug where SRand plugin comment could appear in subtest

0.000022  2016-03-07 12:18:25-08:00 America/Los_Angeles

    - Ability to disable subtest skip_all flow control

0.000021  2016-03-06 20:24:46-08:00 America/Los_Angeles

    - Bump minimum Test2 version
    - Add version to all modules
    - Minor doc fixes
    - No logic changes

0.000020  2016-02-05 09:32:52-08:00 America/Los_Angeles

    - Fix typo that made mock tool look in the wrong place for handlers

0.000019  2016-01-28 21:28:37-08:00 America/Los_Angeles

    - Formally add the warning and exception tools
    - warning and exception tools added to the extended bundle

0.000018  2016-01-12 16:09:44-08:00 America/Los_Angeles

    - Add grab tool
    - Fix documentation

0.000017  2016-01-12 05:54:43-08:00 America/Los_Angeles

    - Fix poorly written test

0.000016  2016-01-11 15:18:04-08:00 America/Los_Angeles

    - Add diagnostics test report