@@ -2,14 +2,14 @@ use Test2::Bundle::Extended -target => 'Test2::Todo';
 
 my $todo = Test2::Todo->new(reason => 'xyz');
 def isa_ok => ($todo, $CLASS);
-def ok => ((grep {$_->{code} == $todo->_filter} @{Test2::API::test2_stack->top->_filters}), "filter added");
+def ok => ((grep {$_->{code} == $todo->_filter} @{Test2::API::test2_stack->top->_pre_filters}), "filter added");
 def is => ($todo->reason, 'xyz', "got reason");
 def ref_is => ($todo->hub, Test2::API::test2_stack->top, "used current hub");
 def ok => (my $filter = $todo->_filter, "stored filter");
 $todo->end;
 
 do_def;
-ok(!(grep {$_->{code} == $filter} @{Test2::API::test2_stack->top->_filters}), "filter removed");
+ok(!(grep {$_->{code} == $filter} @{Test2::API::test2_stack->top->_pre_filters}), "filter removed");
 
 my $ok   = Test2::Event::Ok->new(pass => 0, name => 'xxx');
 my $diag = Test2::Event::Diag->new(message => 'xxx');
